encore des tests

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h3>0 citations</h3>
 <hr>
 <form id="formEntries">
-    <label for="citation">Citation : </label>
-    <input type="text" name="citation" id="citation" autocomplete="off" placeholder="Citation" autofocus required>
+    <label for="quote">Citation : </label>
+    <input type="text" name="quote" id="quote" autocomplete="off" placeholder="Citation" autofocus required>
     <br>
     <label for="author">Auteur(trice) : </label>
     <input type="text" name="author" id="author" autocomplete="off" placeholder="Nom de l'auteur(trice)" autofocus required>
