--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <hr>
 <form id="formEntries">
     <label for="quote">Citation : </label>
-    <input type="text" name="quote" id="quote" autocomplete="off" placeholder="Citation" autofocus required>
+    <input type="text" name="quote" id="quote" autocomplete="off" placeholder="Citation" autofocus>
     <br>
     <label for="author">Auteur(trice) : </label>
-    <input type="text" name="author" id="author" autocomplete="off" placeholder="Nom de l'auteur(trice)" autofocus required>
+    <input type="text" name="author" id="author" autocomplete="off" placeholder="Nom de l'auteur(trice)" autofocus>
     <button type="submit" id="buttonSend">Proposer</button>
 </form>
 <div id="quote-list">
