--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <hr>
 <form id="formEntries">
     <label for="quote">Citation : </label>
-    <input type="text" name="quote" id="quote" autocomplete="off" placeholder="Citation" autofocus>
+    <input type="text" name="quote" id="quote" autocomplete="off" placeholder="Citation" autofocus required>
     <br>
     <label for="author">Auteur(trice) : </label>
-    <input type="text" name="author" id="author" autocomplete="off" placeholder="Nom de l'auteur(trice)" autofocus>
+    <input type="text" name="author" id="author" autocomplete="off" placeholder="Nom de l'auteur(trice)" autofocus required>
     <button type="submit" id="buttonSend">Proposer</button>
 </form>
 <div id="quote-list">
     <div class="quote">
         <p>Citation : "On ne naît pas femme, on le devient."</p>
         <p>Autrice : Simone de Beauvoir</p>
-        <p>Citation : "Maman disait toujours, la vie c'est comme une boîte de chocolat, on ne sait jamais sur quoi on va tomer"</p>
+        <p>Citation : "Maman disait toujours, la vie c'est comme une boîte de chocolat, on ne sait jamais sur quoi on va tomber"</p>
         <p>Auteur : "Forrest Gump"</p>
     </div>
 </div>
-<script defer src="script.js"></script>    
+<script src="script.js"></script>    
 </body>
 </html>
